--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
+<div class="container">
+  <app-header></app-header>
+  <app-recipes></app-recipes>
+  <app-shopping-list></app-shopping-list>
+  <input type="button" value="Button1" class="btn btn-primary"/>
+  <input type="button" value="Button2" class="btn btn-warning"/>
 
-<input type="button" value="Button1" class="btn btn-primary"/>
-<input type="button" value="Button2" class="btn btn-warning"/>
+</div>
